--- a/Barrio1/Views/DetallesPage.xaml
+++ b/Barrio1/Views/DetallesPage.xaml
@@ -6,8 +6,8 @@
     xmlns:model="clr-namespace:Barrio1.Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:Barrio1.ViewModels"
-    Title="Detalles"
-    x:DataType="viewmodel:DetallesViewModel">
+    x:DataType="viewmodel:DetallesViewModel"
+    BackgroundColor="#2D2D2D">
 
     <ContentPage.Resources>
         <toolkit:BoolToObjectConverter
@@ -19,8 +19,9 @@
         <toolkit:EventToCommandBehavior Command="{Binding SalidaBaCommand}" EventName="Appearing"/>
         <toolkit:EventToCommandBehavior Command="{Binding SalidaBoCommand}" EventName="Appearing"/>
     </ContentPage.Behaviors>
-    <VerticalStackLayout Margin="20">
-        <Grid Padding="10">
+
+    <VerticalStackLayout Margin="5">
+        <Grid Padding="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="45" />
                 <RowDefinition Height="45" />
@@ -40,77 +41,76 @@
                 <RowDefinition Height="45" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="130" />
-                <ColumnDefinition Width="130" />
-                <ColumnDefinition Width="130" />
+                <ColumnDefinition Width="110" />
+                <ColumnDefinition Width="140" />
+                <ColumnDefinition Width="140" />
             </Grid.ColumnDefinitions>
 
-            <Label Text="Vendedor" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.vendor}" Grid.Column="0" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Vendedor" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.vendor}" Grid.Column="0" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Cliente" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.name}" Grid.Column="1" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Cliente" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.name}" Grid.Column="1" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Nota numero" Grid.Column="2" Grid.Row="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.id}" Grid.Column="2" Grid.Row="1" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Nota numero" Grid.Column="2" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.id}" Grid.Column="2" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
+            <Label Text="" Grid.Column="0" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="Botellas" Grid.Column="1" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="Barriles" Grid.Column="2" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="" Grid.Column="0" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Botellas" Grid.Column="1" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="2" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Llanerita" Grid.Column="0" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockLlane}" Grid.Column="1" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaLlane}" Grid.Column="2" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Llanerita" Grid.Column="0" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockLlane}" Grid.Column="1" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaLlane}" Grid.Column="2" Grid.Row="3" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Maleficio" Grid.Column="0" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockMale}" Grid.Column="1" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaMale}" Grid.Column="2" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Maleficio" Grid.Column="0" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockMale}" Grid.Column="1" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaMale}" Grid.Column="2" Grid.Row="4" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="San juanera" Grid.Column="0" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockSJ}" Grid.Column="1" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaSJ}" Grid.Column="2" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="San juanera" Grid.Column="0" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockSJ}" Grid.Column="1" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaSJ}" Grid.Column="2" Grid.Row="5" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Barrio 21" Grid.Column="0" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockB21}" Grid.Column="1" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaB21}" Grid.Column="2" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Barrio 21" Grid.Column="0" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockB21}" Grid.Column="1" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaB21}" Grid.Column="2" Grid.Row="6" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Barranqueña" Grid.Column="0" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBarra}" Grid.Column="1" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaBarra}" Grid.Column="2" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Barranqueña" Grid.Column="0" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBarra}" Grid.Column="1" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaBarra}" Grid.Column="2" Grid.Row="7" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Toloachi" Grid.Column="0" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockTolo}" Grid.Column="1" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaTolo}" Grid.Column="2" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Toloachi" Grid.Column="0" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockTolo}" Grid.Column="1" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaTolo}" Grid.Column="2" Grid.Row="8" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Genesis" Grid.Column="0" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockGen}" Grid.Column="1" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaGen}" Grid.Column="2" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Genesis" Grid.Column="0" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockGen}" Grid.Column="1" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaGen}" Grid.Column="2" Grid.Row="9" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Celi" Grid.Column="0" Grid.Row="10" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockCeli}" Grid.Column="1" Grid.Row="10" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaCeli}" Grid.Column="2" Grid.Row="10" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Celi" Grid.Column="0" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockCeli}" Grid.Column="1" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaCeli}" Grid.Column="2" Grid.Row="10" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Guasanta" Grid.Column="0" Grid.Row="11" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockGuasanta}" Grid.Column="1" Grid.Row="11" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding StockBaGuasanta}" Grid.Column="2" Grid.Row="11" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Guasanta" Grid.Column="0" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockGuasanta}" Grid.Column="1" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding StockBaGuasanta}" Grid.Column="2" Grid.Row="11" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Saldo pagado" Grid.Row="12" Grid.Column="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.pago}" Grid.Row="13" Grid.Column="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="Costo de venta" Grid.Row="12" Grid.Column="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.costo}" Grid.Row="13" Grid.Column="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="Forma de pago" Grid.Row="12" Grid.Column="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.metodo}" Grid.Row="13" Grid.Column="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Saldo pagado" Grid.Row="12" Grid.Column="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.pago}" Grid.Row="13" Grid.Column="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Costo de venta" Grid.Row="12" Grid.Column="1" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.costo}" Grid.Row="13" Grid.Column="1" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Forma de pago" Grid.Row="12" Grid.Column="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.metodo}" Grid.Row="13" Grid.Column="2" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Fecha de entrega" Grid.Row="14" Grid.Column="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.dateC}" Grid.Row="15" Grid.Column="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="Fecha de Pago" Grid.Row="14" Grid.Column="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
+            <Label Text="{Binding Venta.dateP}" Grid.Row="15" Grid.Column="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
 
-            <Label Text="Fecha de entrega" Grid.Row="14" Grid.Column="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.dateC}" Grid.Row="15" Grid.Column="0" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="Fecha de Pago" Grid.Row="14" Grid.Column="2" HorizontalOptions="CenterAndExpand"/>
-            <Label Text="{Binding Venta.dateP}" Grid.Row="15" Grid.Column="2" HorizontalOptions="CenterAndExpand"/>
-
-            <Label Text="Estado" Grid.Column="1" Grid.Row="14" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="Estado" Grid.Column="1" Grid.Row="14" HorizontalOptions="CenterAndExpand" TextColor="White"/>
             <Label Text="{Binding Venta.est, Converter={StaticResource BoolToObjectConverter}}" 
                     Grid.Column="1" Grid.Row="15" HorizontalOptions="CenterAndExpand"
-                    LineBreakMode="TailTruncation" />
+                    LineBreakMode="TailTruncation" TextColor="White"/>
 
         </Grid>
     </VerticalStackLayout>
