--- a/Barrio1/Views/VentasListingPage.xaml
+++ b/Barrio1/Views/VentasListingPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="Barrio1.Views.VentasListingPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -6,14 +5,16 @@
     xmlns:model="clr-namespace:Barrio1.Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:Barrio1.ViewModels"
-    x:DataType="viewmodel:VentasListingViewModel">
+    x:DataType="viewmodel:VentasListingViewModel"
+    BackgroundColor="#2D2D2D">
 
     <ContentPage.Resources>
         <toolkit:BoolToObjectConverter
             x:Key="BoolToObjectConverter"
             FalseObject="Pago pendiente ❌"
-            TrueObject="Pago Completo ✔" />
+            TrueObject="Pago completo ✔" />
     </ContentPage.Resources>
+
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior Command="{Binding GetVentasCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
@@ -21,34 +22,61 @@
     <Grid
         Margin="20"
         RowDefinitions="Auto,*"
-        RowSpacing="10">
-        <Grid Grid.Row="0">
+        RowSpacing="20">
+
+        <!-- Encabezado -->
+        <Grid Grid.Row="0" ColumnDefinitions="*,Auto,Auto" RowDefinitions="*,Auto,Auto">
             <Label
                 Grid.Column="0"
                 FontAttributes="Bold"
                 FontSize="Title"
                 Text="Registro"
                 HorizontalOptions="Start"
-                />
+                TextColor="White" />
 
             <Button
                 Grid.Column="1"
                 Background="#3ece8e"
                 Command="{Binding GetInventarioCommand}"
-                HorizontalOptions="CenterAndExpand"
                 Text="Inventario"
-                TextColor="Black" />
+                TextColor="White" />
 
             <Button
                 Grid.Column="2"
                 Background="#3ece8e"
                 Command="{Binding AddVentaCommand}"
-                HorizontalOptions="End"
                 Text="Añadir venta"
-                TextColor="Black" />
+                TextColor="White" />
+
+
+            <!-- Filtro de fechas -->
+            <Picker
+                Grid.Row="1"
+                Grid.Column="0"
+                x:Name="MesPicker"
+                ItemsSource="{Binding Meses}"
+                SelectedItem="{Binding MesSeleccionado}"
+                TextColor="White"
+                WidthRequest="120" />
+            <Picker
+                Grid.Row="1"
+                    Grid.Column="1"
+                    x:Name="AnoPicker"
+                    ItemsSource="{Binding Anos}"
+                    SelectedItem="{Binding AnoSeleccionado}"
+                    TextColor="White"
+                    WidthRequest="120" />
+            <Button
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Text="Filtrar"
+                    Command="{Binding FiltrarVentasCommand}"
+                    BackgroundColor="#3ece8e"
+                    TextColor="White" />
         </Grid>
 
-        <CollectionView Grid.Row="1" ItemsSource="{Binding Ventas}">
+        <!-- Listado -->
+        <CollectionView Grid.Row="2" ItemsSource="{Binding Ventas}">
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout ItemSpacing="6" Orientation="Vertical" />
             </CollectionView.ItemsLayout>
@@ -60,76 +88,38 @@
                         Background="#601d2021"
                         StrokeThickness="1">
                         <Border.StrokeShape>
-                            <RoundRectangle CornerRadius="10,10,10,10" />
+                            <RoundRectangle CornerRadius="10" />
                         </Border.StrokeShape>
-                        <Grid RowDefinitions="Auto,*" RowSpacing="10">
-                            <Grid Grid.Row="0" RowDefinitions="Auto,Auto,Auto">
-                                <Label
-                                    Grid.Column="1"
-                                    Grid.Row="0"
-                                    FontAttributes="Bold"
-                                    FontSize="Medium"
-                                    Text="Nota"
-                                    HorizontalOptions="Center"/>
-                                <Label
-                                    Grid.Column="1"
-                                    Grid.Row="1"
-                                    FontAttributes="Bold"
-                                    FontSize="Medium"
-                                    Text="{Binding id}"
-                                    HorizontalOptions="CenterAndExpand"
-                                    />
-                                <Label
-                                    Grid.Column="0"
-                                    Grid.Row="0"
-                                    FontSize="Medium"
-                                    FontAttributes="Bold"
-                                    Text="Cliente"
-                                    HorizontalOptions="Start"/>
-                                <Label
-                                    Grid.Column="0"
-                                    Grid.Row="1"
-                                    Margin="0,2"
-                                    FontSize="Medium"
-                                    HorizontalOptions="Start"
-                                    Text="{Binding name}" />
-                                <Label
-                                    Grid.Column="2"
-                                    Grid.Row="0"
-                                    FontSize="Medium"
-                                    FontAttributes="Bold"
-                                    Text="Estado"
-                                    HorizontalOptions="End"/>
-                                <Label
-                                    Grid.Column="2"
-                                    Grid.Row="1"
-                                    HorizontalOptions="End"
-                                    Text="{Binding est, Converter={StaticResource BoolToObjectConverter}}"
-                                    LineBreakMode="TailTruncation"
-                                    TextColor="#eff5f3"
-                                    />
+                        <Grid RowDefinitions="Auto,Auto,Auto" RowSpacing="5">
+                            <Label
+                                TextColor="White"
+                                Grid.Row="0"
+                                FontAttributes="Bold"
+                                Text="{Binding id, StringFormat='Nota: {0}'}" />
+                            <Label
+                                TextColor="White"
+                                Grid.Row="1"
+                                Text="{Binding name, StringFormat='Cliente: {0}'}"/>
+                            <Label
+                                Grid.Row="2"
+                                Text="{Binding est, Converter={StaticResource BoolToObjectConverter}}"
+                                TextColor="#eff5f3" />
 
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="End" Grid.Row="3">
                                 <Button
-                                    HorizontalOptions="EndAndExpand"
-                                    Grid.Column="9"
-                                    Grid.Row="9"
                                     BackgroundColor="Crimson"
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:VentasListingViewModel}}, Path=DetallesNotaCommand}"
                                     CommandParameter="{Binding .}"
                                     Text="Detalles"
-                                    TextColor="White"
-                                    />
+                                    TextColor="White" />
 
                                 <Button
-                                    HorizontalOptions="StartAndExpand"
-                                    Grid.Column="9"
-                                    Grid.Row="9"
                                     BackgroundColor="#4A88DA"
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:VentasListingViewModel}}, Path=UpdateVentaCommand}"
                                     CommandParameter="{Binding .}"
                                     Text="Actualizar"
                                     TextColor="#eff5f3" />
-                            </Grid>
+                            </StackLayout>
                         </Grid>
                     </Border>
                 </DataTemplate>
